--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,19 @@
     <string name="nova_viagem">Nova Viagem</string>
     <string name="minhas_viagens">Minhas Viagens</string>
     <string name="configuracoes">Configurações</string>
+    <string name="destino">Destino</string>
+    <string name="tipo_da_viagem">Tipo da Viagem</string>
+    <string name="lazer">Lazer</string>
+    <string name="negocios">Negocios</string>
+    <string name="data_da_chegada">Data da Chegada</string>
+    <string name="data_da_saida">Data da Saida</string>
+    <string name="selecione">Selecione</string>
+    <string name="orcamento">Orçamento</string>
+    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
+    <string name="criar_viagem">Criar Viagem</string>
+    <string name="valor">Valor</string>
+    <string name="data">Data</string>
+
+
+
 </resources>
