Criando a action bar e menus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,14 @@
     <string name="descricao">Descrição</string>
     <string name="local">Local</string>
     <string name="gastei">Gastei</string>
+    <string name="remover">Remover</string>
+    <string name="remover_viagem">Remover viagem</string>
+    <string name="sair">Sair</string>
+    <string name="opcoes">Opções</string>
+    <string name="edita">Editar</string>
+
+
+
     <string name="categoria">Categoria</string>
     <string-array name="categoria_gasto">
         <item>Alimentação</item>
