--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="valor_limite">Alerta de gastos</string>
     <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
     <string name="informe_valor_limite">Informe o valor limite (em %)</string>
+    <string name="manter_conectado">Manter conectado</string>
 
 
 
