--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
     <string name="informe_valor_limite">Informe o valor limite (em %)</string>
     <string name="manter_conectado">Manter conectado</string>
+    <string name="registro_salvo">Registro salvo com sucesso!</string>
+    <string name="erro_salvar">Erro ao salvar!</string>
 
 
 
