--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="manter_conectado">Manter conectado</string>
     <string name="registro_salvo">Registro salvo com sucesso!</string>
     <string name="erro_salvar">Erro ao salvar!</string>
-
+<string name="nova_anotacao">Nova Anotação</string>
 
 
     <string name="categoria">Categoria</string>
